add the option to show console logging in the terminal

--- a/components/Terminal.css
+++ b/components/Terminal.css
@@ -1,44 +1,41 @@
-.container-main {
+.terminal-container-wrapper {
 	margin: 100px 0;
 	font-family: 'Inconsolata', monospace;
 	font-size: 0.9em;
 	color: green;
 }
 
-.container {
+.terminal-container {
 	display: block;
 	margin: 0 auto;
 }
 
-#app, div.input-area {
+.terminal-input-area {
 	height: 100%;
 	padding: 3px;
 }
 
-input {
+.terminal-main-input {
 	font-size: 0.9em
 }
 
-div#main {
+.terminal-container-main {
 	max-width: 600px;
 	background: black;
 	border-radius: 1px;
 	height: 600px;
-/*  -webkit-box-shadow: 0px 0px 13px 0px rgba(50, 50, 50, 0.59);
-  -moz-box-shadow:    0px 0px 13px 0px rgba(50, 50, 50, 0.59);
-	box-shadow:         0px 0px 13px 0px rgba(50, 50, 50, 0.59);*/
 	overflow: scroll;
 }
 
-.holder {
+.terminal-holder {
   overflow: auto;
 }
 
-.prompt {
+.terminal-prompt {
 	color: green;
 }
 
-.main, .main:focus {
+.terminal-main-input, .terminal-main-input:focus {
 	border: none;
 	padding: 0;
 	margin: 3px;
@@ -48,12 +45,12 @@ div#main {
 	outline: none;
 }
 
-.print {
-	margin-bottom: 10px;
-	line-height: 21px;
+.terminal-output-line {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-#content {
+.terminal-content {
 	padding: 20px;
 	height: 100%;
 }
