added animation on maximise

--- a/components/Bar.css
+++ b/components/Bar.css
@@ -1,6 +1,7 @@
 .terminal-top-bar {
   height: 30px;
   max-width: 600px;
+  transition: all 0.4s ease-out;
   background: black;
   border-radius: 1px;
 }
