animation on maximise

--- a/components/Terminal.css
+++ b/components/Terminal.css
@@ -28,6 +28,7 @@
 
 .terminal-container-main {
   max-width: 600px;
+  transition: all 0.4s ease-out;
   background: black;
   border-radius: 1px;
   height: 600px;
