--- a/components/Terminal.css
+++ b/components/Terminal.css
@@ -34,6 +34,8 @@
 }
 
 .terminal-input {
+  display: flex;
+  align-items: center;
   padding-top: 15px;
   padding-bottom: 15px;
 }
@@ -64,7 +66,7 @@
   margin: 3px;
   background: black;
   color: green;
-  width: 80%;
+  flex: 1;
   outline: none;
 }
 
