clean up styles so that text can be selected

--- a/src/styles/Terminal.scss
+++ b/src/styles/Terminal.scss
@@ -72,6 +72,11 @@
   max-height: 600px;
   height: 100%;
   overflow: scroll;
+  position: relative;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .terminal-holder {
